--- a/app/src/main/res/layout/fragment_speaker.xml
+++ b/app/src/main/res/layout/fragment_speaker.xml
@@ -91,5 +91,12 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:textColor="#000"/>
 
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"/>
+
 
 </LinearLayout>
