Added splash for loading data on app start

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,8 +12,10 @@
     <dimen name="toolbar_elevation">8dp</dimen>
     <dimen name="schedule_column_width">360dp</dimen>
     <dimen name="detail_card_view_elevation">6dp</dimen>
-    <!-- Enlarge the card view by 7dp left & right and 10dp top & bottom
-        to compensate for the compatibility padding of the 6dp elevation -->
+    <!--
+         Enlarge the card view by 7dp left & right and 10dp top & bottom
+        to compensate for the compatibility padding of the 6dp elevation
+    -->
     <dimen name="detail_card_view_margin_left">353dp</dimen>
     <dimen name="detail_card_view_margin_right">89dp</dimen>
     <dimen name="detail_card_view_margin_top">54dp</dimen>
@@ -21,5 +23,7 @@
     <dimen name="fab_diameter">56dp</dimen>
     <dimen name="fab_elevation_low">2dp</dimen>
     <dimen name="fab_elevation_high">4dp</dimen>
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
