Changed Splash Screen, Fetching data from new Doc, few bugs fixed

--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -16,7 +16,7 @@
             android:layout_height="60dp"
             android:layout_margin="10dp"
             android:adjustViewBounds="true"
-            android:scaleType="centerInside"
+            android:scaleType="centerCrop"
             android:src="@drawable/default_user"/>
 
 
