--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<uk.co.senab.photoview.PhotoView xmlns:android="http://schemas.android.com/apk/res/android"
+<uk.co.senab.photoview.PhotoView
     android:id="@+id/map"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:scaleType="fitCenter"
-    android:src="@drawable/campusmap" />
+    android:src="@drawable/campusmap"/>
