--- a/app/src/main/res/layout/list_tracks.xml
+++ b/app/src/main/res/layout/list_tracks.xml
@@ -5,7 +5,17 @@
               android:orientation="vertical"
               android:padding="10dp">
 
-
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        card_view:cardCornerRadius="4dp">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <TextView
         android:id="@+id/textView_track_title"
         android:layout_width="match_parent"
@@ -16,5 +26,8 @@
     <TextView
         android:id="@+id/textView_track_information"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        />
+</LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
