--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -35,19 +35,49 @@
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="left"
-                android:background="@color/main_menu_background"
                 android:orientation="vertical">
 
-                <ListView
-                    android:id="@+id/main_menu_list"
+                <ScrollView
+                    android:id="@+id/main_menu_scroll"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:cacheColorHint="@android:color/transparent"
-                    android:divider="@null"
-                    android:dividerHeight="0dp"
-                    tools:listheader="@layout/header_main_menu"
-                    tools:listitem="@layout/item_main_menu"/>
+                    android:background="@color/main_menu_background">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="@dimen/main_menu_padding"
+                            android:scaleType="center"
+                            android:src="@drawable/fosdem_title"/>
+
+                        <be.digitalia.fosdem.widgets.AdapterLinearLayout
+                            android:id="@+id/sections"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"/>
+
+                        <View
+                            style="@style/SeparatorLine"
+                            android:layout_marginBottom="8dp"
+                            android:layout_marginTop="8dp"/>
+
+                        <TextView
+                            android:id="@+id/settings"
+                            style="@style/MainMenuItem"
+                            android:text="@string/settings"/>
+
+                        <TextView
+                            android:id="@+id/about"
+                            style="@style/MainMenuItem"
+                            android:text="@string/about"/>
+
+                    </LinearLayout>
+                </ScrollView>
 
                 <TextView
                     android:id="@+id/last_update"
