--- a/app/src/main/res/anim-v21/fab_state_list.xml
+++ b/app/src/main/res/anim-v21/fab_state_list.xml
@@ -4,16 +4,14 @@
         <objectAnimator
             android:duration="@android:integer/config_shortAnimTime"
             android:propertyName="translationZ"
-            android:valueFrom="@dimen/fab_elevation_low"
-            android:valueTo="@dimen/fab_elevation_high"
+            android:valueTo="@dimen/fab_press_translation_z"
             android:valueType="floatType"/>
     </item>
     <item>
         <objectAnimator
             android:duration="@android:integer/config_shortAnimTime"
             android:propertyName="translationZ"
-            android:valueFrom="@dimen/fab_elevation_high"
-            android:valueTo="@dimen/fab_elevation_low"
+            android:valueTo="0"
             android:valueType="floatType"/>
     </item>
 </selector>
