--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -14,4 +14,11 @@
         <item name="android:textColorLink">?android:attr/colorAccent</item>
     </style>
 
+    <!-- Styles -->
+
+    <style name="FloatingActionButton" parent="FloatingActionButtonBase">
+        <item name="android:elevation">@dimen/fab_elevation</item>
+        <item name="android:stateListAnimator">@anim/fab_state_list</item>
+    </style>
+
 </resources>
