--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -35,14 +35,14 @@
                 android:layout_width="260dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="left"
+                android:background="@color/main_menu_background"
                 android:orientation="vertical">
 
                 <ScrollView
                     android:id="@+id/main_menu_scroll"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@color/main_menu_background">
+                    android:layout_weight="1">
 
                     <LinearLayout
                         android:layout_width="match_parent"
