Migrate to AppCompat 23.1.1 Removed legacy hacks Material dialogs on older versions

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,16 +3,7 @@
 
     <!-- Main theme -->
 
-    <style name="AppTheme" parent="Base.AppTheme">
-        <item name="android:alertDialogTheme">@style/AlertDialogTheme</item>
-    </style>
-
-    <style name="AlertDialogTheme" parent="android:Theme.Material.Light.Dialog.Alert">
-        <item name="android:colorPrimary">@color/color_primary</item>
-        <item name="android:colorPrimaryDark">@color/color_primary_dark</item>
-        <item name="android:colorAccent">@color/color_accent</item>
-        <item name="android:textColorLink">?android:attr/colorAccent</item>
-    </style>
+    <style name="AppTheme" parent="Base.AppTheme"/>
 
     <!-- Styles -->
 
