Updated Navigation Drawer in MainActivity to comply with latest material design guidelines.

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -5,6 +5,11 @@
 
     <style name="AppTheme" parent="Base.AppTheme"/>
 
+    <style name="AppTheme.NoActionBar.WindowDrawsSystemBarBackgrounds">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+    </style>
+
     <!-- Styles -->
 
     <style name="FloatingActionButton" parent="FloatingActionButtonBase">
