--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <dimen name="main_menu_width">260dp</dimen>
+    <dimen name="main_menu_header_height">128dp</dimen>
     <dimen name="main_menu_padding">16dp</dimen>
     <dimen name="main_menu_drawable_padding">32dp</dimen>
     <dimen name="main_menu_item_height">48dp</dimen>
+    <dimen name="main_menu_footer_height">32dp</dimen>
     <dimen name="list_item_padding">8dp</dimen>
     <dimen name="list_item_title_text_size">18sp</dimen>
     <dimen name="list_item_medium_text_size">16sp</dimen>
