--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,105 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+<android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    tools:context=".activities.MainActivity">
 
-    <LinearLayout
+    <!-- Main content view -->
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            style="@style/Toolbar.Fosdem"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <android.support.v4.widget.DrawerLayout
-            android:id="@+id/drawer_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <!-- Main content view -->
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                style="@style/Toolbar.Fosdem"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"/>
 
             <FrameLayout
                 android:id="@+id/content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
 
-            <!-- Left drawer -->
+        </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/main_menu"
-                android:layout_width="260dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="left"
-                android:background="@color/main_menu_background"
-                android:orientation="vertical">
+        <ProgressBar
+            android:id="@+id/progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="-7dp"
+            android:max="100"
+            android:visibility="gone"
+            tools:visibility="visible"/>
 
-                <ScrollView
-                    android:id="@+id/main_menu_scroll"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1">
+    </FrameLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+    <!-- Navigation drawer -->
 
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="@dimen/main_menu_padding"
-                            android:scaleType="center"
-                            android:src="@drawable/fosdem_title"/>
+    <include layout="@layout/include_navigation_drawer"/>
 
-                        <be.digitalia.fosdem.widgets.AdapterLinearLayout
-                            android:id="@+id/sections"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
-
-                        <View
-                            style="@style/SeparatorLine"
-                            android:layout_marginBottom="8dp"
-                            android:layout_marginTop="8dp"/>
-
-                        <TextView
-                            android:id="@+id/settings"
-                            style="@style/MainMenuItem"
-                            android:text="@string/settings"/>
-
-                        <TextView
-                            android:id="@+id/about"
-                            style="@style/MainMenuItem"
-                            android:text="@string/about"/>
-
-                    </LinearLayout>
-                </ScrollView>
-
-                <TextView
-                    android:id="@+id/last_update"
-                    style="@style/TextAppearance.AppCompat.Caption"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#10000000"
-                    android:gravity="center"
-                    android:padding="4dp"
-                    tools:text="DB last updated: 1 jan. 2015 13:37:00"/>
-            </LinearLayout>
-
-        </android.support.v4.widget.DrawerLayout>
-    </LinearLayout>
-
-    <ProgressBar
-        android:id="@+id/progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:layout_marginTop="-7dp"
-        android:max="100"
-        android:visibility="gone"/>
-</FrameLayout>
+</android.support.v4.widget.DrawerLayout>
