--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,4 +12,8 @@
         <attr name="distributeEvenly" format="boolean"/>
     </declare-styleable>
 
+    <declare-styleable name="ScrimInsetsFrameLayout">
+        <attr name="insetForeground" format="color|reference"/>
+    </declare-styleable>
+
 </resources>
