--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,8 @@
     <color name="color_primary_dark">#76005e</color>
     <color name="color_accent">#3479c4</color>
     <color name="fosdem_blue_translucent">#663479c4</color>
-    <color name="main_menu_background">#fffafafa</color>
+    <color name="main_menu_background">#fafafa</color>
+    <color name="main_menu_footer_background">#eaeaea</color>
     <color name="translucent_grey">#0c000000</color>
     <color name="schedule_time_background">#29000000</color>
     <color name="schedule_time_foreground">#000</color>
