--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
+<be.digitalia.fosdem.widgets.PhotoViewDrawerLayout
     android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -50,4 +50,4 @@
 
     <include layout="@layout/include_navigation_drawer"/>
 
-</android.support.v4.widget.DrawerLayout>
+</be.digitalia.fosdem.widgets.PhotoViewDrawerLayout>
