--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorPrimaryDark">@color/color_primary_dark</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="alertDialogTheme">@style/AlertDialogTheme</item>
+        <item name="android:windowContentOverlay">@null</item>
 
         <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
     </style>
