--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="translucent_grey">#0c000000</color>
     <color name="schedule_time_background">#29000000</color>
     <color name="schedule_time_running_background">#d6000000</color>
+    <color name="error_material">#dd2c00</color>
 
 </resources>
