Fixed misc lint warnings and replaced deprecated methods

--- a/app/src/main/res/layout-sw600dp-land/track_schedule.xml
+++ b/app/src/main/res/layout-sw600dp-land/track_schedule.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".activities.TrackScheduleActivity">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       tools:context=".activities.TrackScheduleActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,5 +46,7 @@
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="100dp"
+        android:contentDescription="@string/add_bookmark"
         android:src="@drawable/ic_bookmark_outline_white_24dp"/>
-</FrameLayout>
+
+</merge>
