Moved SlidingTabLayout to the main widgets package; merged some of its files

--- a/app/src/main/res/layout/fragment_tracks.xml
+++ b/app/src/main/res/layout/fragment_tracks.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.example.android.common.view.SlidingTabLayout
+        <be.digitalia.fosdem.widgets.SlidingTabLayout
             android:id="@+id/sliding_tabs"
             style="@style/SlidingTabs"
             android:layout_width="match_parent"
