Removed workaround for fixed AppCompat bug (links improperly colored)

--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,10 +3,7 @@
 
     <!-- Main theme -->
 
-    <style name="AppTheme" parent="Base.AppTheme">
-        <!-- Workaround for AppCompat bug on API 21-22 -->
-        <item name="android:textColorLink">?android:attr/colorAccent</item>
-    </style>
+    <style name="AppTheme" parent="Base.AppTheme"/>
 
     <style name="AppTheme.NoActionBar.WindowDrawsSystemBarBackgrounds">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
