--- a/app/src/main/res/drawable/avd_sync_white_24dp.xml
+++ b/app/src/main/res/drawable/avd_sync_white_24dp.xml
@@ -2,5 +2,5 @@
                  android:drawable="@drawable/ic_sync_white_24dp">
     <target
         android:name="rotationGroup"
-        android:animation="@anim/ic_sync_rotation"/>
+        android:animation="@animator/sync_rotation"/>
 </animated-vector>
