--- a/app/src/main/res/drawable/ic_filter_list_selected_white_24dp.xml
+++ b/app/src/main/res/drawable/ic_filter_list_selected_white_24dp.xml
@@ -5,5 +5,5 @@
         android:viewportHeight="24.0">
     <path
         android:fillColor="#FFFFFFFF"
-        android:pathData="M21,15.06L19.94,14l-4.88,4.88 -2.12,-2.12 -1.06,1.06L15.06,21l5.94,-5.94zM10,18l2,-2h-2v2zM3,6v2h18L21,6L3,6zM6,13h12v-2L6,11v2z"/>
+        android:pathData="M15,18.17L13.42,16.59 12,18l3,3 6,-6 -1.41,-1.41zM6,13h12v-2h-12zM3,6v2h18v-2zM10,18l2,-2h-2z"/>
 </vector>
