Replaced ProgressBars with ContentLoadingProgressBars and re-implemented ListFragment

--- a/app/src/main/res/layout/track_schedule_event.xml
+++ b/app/src/main/res/layout/track_schedule_event.xml
@@ -3,7 +3,7 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent">
 
-    <ProgressBar
+    <be.digitalia.fosdem.widgets.ContentLoadingProgressBar
         android:id="@+id/progress"
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
