Updated notifications delay text in preferences screen; show a checkbox to enable notifications on API 21+

--- a/app/src/main/res/xml-v21/settings.xml
+++ b/app/src/main/res/xml-v21/settings.xml
@@ -2,7 +2,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory android:title="@string/settings_notifications">
-        <CheckBoxPreference
+        <SwitchPreference
             android:defaultValue="true"
             android:key="notifications_enabled"
             android:summary="@string/settings_notifications_enabled_summary"
