--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
         <item name="android:windowContentOverlay">@null</item>
 
         <item name="activatedBackgroundIndicator">@drawable/activated_background</item>
+        <item name="recyclerViewStyle">@style/RecyclerView</item>
     </style>
 
     <style name="AppTheme" parent="Base.AppTheme">
@@ -60,6 +61,10 @@
     </style>
 
     <!-- Styles -->
+
+    <style name="RecyclerView" parent="android:Widget">
+        <item name="android:scrollbars">vertical</item>
+    </style>
 
     <style name="Widget.Design.ScrimInsetsFrameLayout" parent="">
         <item name="insetForeground">#4000</item>
