--- a/app/src/main/res/drawable/ic_avd_fab_bookmark_24dp.xml
+++ b/app/src/main/res/drawable/ic_avd_fab_bookmark_24dp.xml
@@ -6,14 +6,14 @@
     <path
         android:name="bookmark_outline"
         android:fillColor="#FFFFFFFF"
-        android:pathData="M17,18V5H7V18L12,15.82L17,18M17,3A2,2 0 0,1 19,5V21L12,18L5,21V5C5,3.89 5.9,3 7,3H17M11,7H13V9H15V11H13V13H11V11H9V9H11V7Z"/>
+        android:pathData="@string/path_ic_bookmark_outline"/>
     <path
         android:name="filler"
         android:fillColor="#FFFFFFFF"
-        android:pathData="M6,4h12v14h-12z"/>
+        android:pathData="@string/path_ic_bookmark_filler"/>
     <path
         android:name="check"
-        android:pathData="M7.71,9.3L11,12.59L16.55,7.05"
+        android:pathData="@string/path_ic_bookmark_check"
         android:strokeColor="?attr/colorAccent"
         android:strokeWidth="2"/>
 </vector>
