--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="schedule_time_background">#29000000</color>
     <color name="schedule_time_running_background">#d6000000</color>
     <color name="error_material">#dd2c00</color>
+    <color name="shortcut_background">#F5F5F5</color>
 
 </resources>
