Use wrap_content instead of ?attr/actionBarSize for Toolbar height.

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <be.digitalia.fosdem.widgets.PhotoViewDrawerLayout
-    android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -23,7 +23,7 @@
                 android:id="@+id/toolbar"
                 style="@style/Toolbar.Fosdem"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"/>
+                android:layout_height="wrap_content"/>
 
             <FrameLayout
                 android:id="@+id/content"
