--- a/app/src/main/res/animator-v11/bookmark_zoom_in.xml
+++ b/app/src/main/res/animator-v11/bookmark_zoom_in.xml
@@ -1,7 +1,7 @@
 <objectAnimator
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:name="filler"
     android:duration="250"
-    android:propertyName="fillAlpha"
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:propertyName="scaleY"
     android:valueFrom="0"
     android:valueTo="1"/>
