Added on-site navigation button in maps screen

--- a/app/src/main/res/menu/map.xml
+++ b/app/src/main/res/menu/map.xml
@@ -7,5 +7,10 @@
         android:icon="@drawable/ic_directions_white_24dp"
         android:title="@string/directions"
         app:showAsAction="ifRoom"/>
+    <item
+        android:id="@+id/navigation"
+        android:icon="@drawable/ic_navigation_white_24dp"
+        android:title="@string/navigation"
+        app:showAsAction="ifRoom"/>
 
 </menu>
