--- a/app/src/main/res/drawable/activated_background.xml
+++ b/app/src/main/res/drawable/activated_background.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<color
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@android:color/transparent"/>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:state_activated="true">
+        <shape>
+            <solid android:color="@color/fosdem_blue_translucent"/>
+        </shape>
+    </item>
+    <item android:drawable="@android:color/transparent"/>
+
+</selector>
