--- a/app/src/main/res/layout/dialog_room_image.xml
+++ b/app/src/main/res/layout/dialog_room_image.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
@@ -13,8 +12,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="4dp"
-        android:minHeight="56dp"
-        app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"/>
+        android:minHeight="56dp"/>
 
     <ImageView
         android:id="@+id/room_image"
