Added "Volunteer" link in main menu, fixes #29

--- a/app/src/main/res/layout/include_navigation_drawer.xml
+++ b/app/src/main/res/layout/include_navigation_drawer.xml
@@ -44,6 +44,11 @@
                 style="@style/MainMenuItem"
                 android:text="@string/settings"/>
 
+            <TextView
+                android:id="@+id/volunteer"
+                style="@style/MainMenuItem"
+                android:text="@string/volunteer"/>
+
         </LinearLayout>
 
     </ScrollView>
